# Learning

./: .gitignore
2DGameEngine/: CMakeLists.txt  vcpkg.json
2DGameEngine/2DGameEngine/: 2DGameEngine.cpp  2DGameEngine.h  CMakeLists.txt  Game.cpp  Game.h  Logger.cpp
2DGameEngine/src/: CMakeLists.txt  Main.cpp
2DGameEngine/src/Components/: TransformComponent.h
2DGameEngine/src/ECS/: ECS.cpp  ECS.h
2DGameEngine/src/Game/: Game.cpp
2DGameEngine/src/Logger/: Logger.h
2DGameEngine/src/Systems/: MovementSystem.h
3DGraphicsProgramming/: CMakeLists.txt  vcpkg.json
3DGraphicsProgramming/src/: CMakeLists.txt  Main.cpp
3DGraphicsProgramming/src/Display/: Display.cpp  Display.h
3DGraphicsProgramming/src/Mesh/: Mesh.cpp  Mesh.h  Triangle.cpp  Triangle.h
